@@ -78,6 +78,98 @@
     (xlib:warp-pointer *root* x y)))
 
 
+
+
+;;; Root functions utility
+(defun select-generic-root (fun restart-menu)
+  (no-focus)
+  (let* ((current-root (find-root (current-child)))
+         (parent (find-parent-frame (root-original current-root))))
+    (when parent
+      (setf (frame-child parent) (funcall fun (frame-child parent)))
+      (let ((new-root (find-root (frame-selected-child parent))))
+        (setf (current-child) (aif (root-current-child new-root)
+                                   it
+                                   (frame-selected-child parent))))))
+  (show-all-children t)
+  (if restart-menu
+      (open-menu (find-menu 'root-menu))
+      (leave-second-mode)))
+
+(defun select-next-root ()
+  "Select the next root"
+  (select-generic-root #'rotate-list nil))
+
+(defun select-previous-root ()
+  "Select the previous root"
+  (select-generic-root #'anti-rotate-list nil))
+
+
+(defun select-next-root-restart-menu ()
+  "Select the next root"
+  (select-generic-root #'rotate-list t))
+
+(defun select-previous-root-restart-menu ()
+  "Select the previous root"
+  (select-generic-root #'anti-rotate-list t))
+
+
+(defun rotate-root-geometry-generic (fun restart-menu)
+  (no-focus)
+  (funcall fun)
+  (show-all-children t)
+  (if restart-menu
+      (open-menu (find-menu 'root-menu))
+      (leave-second-mode)))
+
+
+(defun rotate-root-geometry-next ()
+  "Rotate root geometry to next root"
+  (rotate-root-geometry-generic #'rotate-root-geometry nil))
+
+(defun rotate-root-geometry-previous ()
+  "Rotate root geometry to previous root"
+  (rotate-root-geometry-generic #'anti-rotate-root-geometry nil))
+
+(defun rotate-root-geometry-next-restart-menu ()
+  "Rotate root geometry to next root"
+  (rotate-root-geometry-generic #'rotate-root-geometry t))
+
+(defun rotate-root-geometry-previous-restart-menu ()
+  "Rotate root geometry to previous root"
+  (rotate-root-geometry-generic #'anti-rotate-root-geometry t))
+
+
+
+(defun exchange-root-geometry-with-mouse ()
+  "Exchange two root geometry pointed with the mouse"
+  (open-notify-window '("Select the first root to exchange"))
+  (wait-no-key-or-button-press)
+  (wait-mouse-button-release)
+  (close-notify-window)
+  (multiple-value-bind (x1 y1) (xlib:query-pointer *root*)
+    (open-notify-window '("Select the second root to exchange"))
+    (wait-no-key-or-button-press)
+    (wait-mouse-button-release)
+    (close-notify-window)
+    (multiple-value-bind (x2 y2) (xlib:query-pointer *root*)
+      (exchange-root-geometry (find-root-by-coordinates x1 y1)
+                              (find-root-by-coordinates x2 y2))))
+  (leave-second-mode))
+
+(defun change-current-root-geometry ()
+  "Change the current root geometry"
+  (let* ((root (find-root (current-child)))
+         (x (query-number "New root X position" (root-x root)))
+         (y (query-number "New root Y position" (root-y root)))
+         (w (query-number "New root width" (root-w root)))
+         (h (query-number "New root height" (root-h root))))
+    (setf (root-x root) x  (root-y root) y
+          (root-w root) w  (root-h root) h)
+    (show-all-children)))
+
+
+
 (defun place-window-from-hints (window)
   "Place a window from its hints"
   (let* ((hints (xlib:wm-normal-hints window))
@@ -1722,82 +1814,4 @@ For window: set current child to window or its parent according to window-parent
 (defun anti-rotate-frame-geometry ()
   "Anti rotate brother frame geometry"
   (rotate-frame-geometry-generic #'reverse))
-
-
-;;; Root functions utility
-(defun select-generic-root (fun restart-menu)
-  (no-focus)
-  (let* ((current-root (find-root (current-child)))
-         (parent (find-parent-frame (root-original current-root))))
-    (when parent
-      (setf (frame-child parent) (funcall fun (frame-child parent)))
-      (let ((new-root (find-root (frame-selected-child parent))))
-        (setf (current-child) (aif (root-current-child new-root)
-                                   it
-                                   (frame-selected-child parent))))))
-  (show-all-children t)
-  (if restart-menu
-      (open-menu (find-menu 'root-menu))
-      (leave-second-mode)))
-
-(defun select-next-root ()
-  "Select the next root"
-  (select-generic-root #'rotate-list nil))
-
-(defun select-previous-root ()
-  "Select the previous root"
-  (select-generic-root #'anti-rotate-list nil))
-
-
-(defun select-next-root-restart-menu ()
-  "Select the next root"
-  (select-generic-root #'rotate-list t))
-
-(defun select-previous-root-restart-menu ()
-  "Select the previous root"
-  (select-generic-root #'anti-rotate-list t))
-
-
-(defun rotate-root-geometry-generic (fun restart-menu)
-  (no-focus)
-  (funcall fun)
-  (show-all-children t)
-  (if restart-menu
-      (open-menu (find-menu 'root-menu))
-      (leave-second-mode)))
-
-
-(defun rotate-root-geometry-next ()
-  "Rotate root geometry to next root"
-  (rotate-root-geometry-generic #'rotate-root-geometry nil))
-
-(defun rotate-root-geometry-previous ()
-  "Rotate root geometry to previous root"
-  (rotate-root-geometry-generic #'anti-rotate-root-geometry nil))
-
-(defun rotate-root-geometry-next-restart-menu ()
-  "Rotate root geometry to next root"
-  (rotate-root-geometry-generic #'rotate-root-geometry t))
-
-(defun rotate-root-geometry-previous-restart-menu ()
-  "Rotate root geometry to previous root"
-  (rotate-root-geometry-generic #'anti-rotate-root-geometry t))
-
-
-
-(defun exchange-root-geometry-with-mouse ()
-  "Exchange two root geometry pointed with the mouse"
-  (open-notify-window '("Select the first root to exchange"))
-  (wait-no-key-or-button-press)
-  (wait-mouse-button-release)
-  (close-notify-window)
-  (multiple-value-bind (x1 y1) (xlib:query-pointer *root*)
-    (open-notify-window '("Select the second root to exchange"))
-    (wait-no-key-or-button-press)
-    (wait-mouse-button-release)
-    (close-notify-window)
-    (multiple-value-bind (x2 y2) (xlib:query-pointer *root*)
-      (exchange-root-geometry (find-root-by-coordinates x1 y1)
-                              (find-root-by-coordinates x2 y2))))
-  (leave-second-mode))
 
