@@ -1,3 +1,8 @@
+2012-05-18  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-util.lisp (change-current-root-geometry): New
+	function.
+
 2012-05-17  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-util.lisp (exchange-root-geometry-with-mouse): New
